# ChangeLog for sys-fs/udev
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.1102 2014/12/17 16:05:56 williamh Exp $

  17 Dec 2014; William Hubbs <williamh@gentoo.org> udev-9999.ebuild:
  skip automagic detection of libxkbcommon by passing --disable-xkbcommon to
  econf

  07 Nov 2014; Samuli Suominen <ssuominen@gentoo.org> -udev-216-r1.ebuild:
  old

*udev-217 (29 Oct 2014)

  29 Oct 2014; Samuli Suominen <ssuominen@gentoo.org> +udev-217.ebuild,
  udev-9999.ebuild:
  Version bump. Pass --disable-terminal to avoid external dependencies of
  libdrm, libevdev, and libxkbcommon. Remove now unused --disable-readahead.
  This is the first version released with no userspace firmware loader. If you
  need firmware loader, you must upgrade Linux kernel to minimum of 3.7.

  16 Oct 2014; Mike Frysinger <vapier@gentoo.org> udev-216.ebuild:
  Mark arm64/m68k/s390/sh stable.

*udev-216-r1 (15 Oct 2014)

  15 Oct 2014; Samuli Suominen <ssuominen@gentoo.org> +udev-216-r1.ebuild,
  udev-9999.ebuild:
  Increase kernel module loading timeout from 30 sec to 180 sec wrt http://cgit.
  freedesktop.org/systemd/systemd/commit/?id=b5338a19864ac3f5632aee48069a6694796
  21dca. Disable USE="firmware-loader" by default with a warning in antipication
  of systemd-udevd >= 217. Raise linux-headers dependency to 3.7 also in 9999
  because according to upstream README, it's the lowest supported kernel, which
  means upstream will start refusing patches to support older kernels in
  src/shared/missing.h

  02 Oct 2014; Robin H. Johnson <robbat2@gentoo.org> udev-216.ebuild:
  BPF_XOR is used in systemd-216/src/libsystemd-network/dhcp-network.c but was
  only introduced inlinux-headers-3.7, so update dependency.

  21 Sep 2014; Samuli Suominen <ssuominen@gentoo.org> -udev-212-r1.ebuild,
  -udev-214.ebuild, -udev-215-r1.ebuild, -udev-215.ebuild:
  old

  21 Sep 2014; Agostino Sarubbo <ago@gentoo.org> udev-216.ebuild: