@@ -1,6 +1,11 @@
 # ChangeLog for sys-fs/udev
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.1102 2014/12/17 16:05:56 williamh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/udev/ChangeLog,v 1.1103 2014/12/17 17:17:42 williamh Exp $
+
+*udev-218 (17 Dec 2014)
+
+  17 Dec 2014; William Hubbs <williamh@gentoo.org> +udev-218.ebuild:
+  version bump
 
   17 Dec 2014; William Hubbs <williamh@gentoo.org> udev-9999.ebuild:
   skip automagic detection of libxkbcommon by passing --disable-xkbcommon to
